kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mpcdc-service
spec:
  selector:
    app: mpcdc-app
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
